--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,8 @@
 cmake_minimum_required(VERSION 3.17)
 project(datagram_transport_local C)
-
-set(CMAKE_C_STANDARD 99)
-
-
-if (WIN32)
-    add_compile_definitions(TORNADO_OS_WINDOWS 1)
-endif(WIN32)
-
+add_subdirectory("deps/piot/clog/src/lib")
+add_subdirectory("deps/piot/tiny-libc/src/lib")
+add_subdirectory("deps/piot/datagram-transport-c/src/lib")
+add_subdirectory("deps/piot/discoid-c/src/lib")
 add_subdirectory("lib")
 add_subdirectory("test")
