--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1,11 +1,7 @@
 cmake_minimum_required(VERSION 3.17)
-project(datagram_transport_local C)
 enable_testing()
 
 set(CMAKE_C_STANDARD 99)
-
-set(deps ../../deps/)
-set(local_deps ./deps/)
 
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
   set(isDebug TRUE)
@@ -19,10 +15,7 @@ if(isDebug)
   set(CONFIGURATION_DEBUG 1)
 endif()
 
-file(GLOB_RECURSE local_deps_src FOLLOW_SYMLINKS "${local_deps}*/src/lib/*.c"
-     "${deps}*/*/src/platform/posix/*.c" "${deps}*/*/src/lib/*.c")
-
-add_executable(datagram_transport_local_test main.c test.c ${local_deps_src})
+add_executable(datagram_transport_local_test main.c test.c)
 
 add_test(NAME datagram_transport_local_test
          COMMAND datagram_transport_local_test)
